correct spacing between section

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -11,18 +11,22 @@ h1 {
 body{
   font-family: Arial, Helvetica, sans-serif;
 }
+.grid{
+  height: 250px;
+}
 
 .box{
-  width: 100%;
-  height: 250px;
+  width: 95%;
+  height: 95%;
   position: relative;
-  top: 0px;
-  left: 0px;
+  border: 1px solid black;
+  margin-right: auto;
+  margin-left: auto;
   overflow: auto;
 }
 
 .title{
-  border: 2px solid black;
+  border: 1px solid black;
   position: relative;
   width: 100px;
   text-align: center;
@@ -54,11 +58,22 @@ body{
   background-color: wheat;
 }
 
+/* Detail for each title */
+#t1{
+  background-color: coral;
+}
+#t2{
+  background-color: pink;
+}
+#t3{
+  background-color: darksalmon;
+}
+
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
   .col-lg-1 {
     width: 8.33%;
@@ -102,7 +117,7 @@ body{
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
   .col-md-1 {
     width: 8.33%;
@@ -146,7 +161,7 @@ body{
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
   .col-sm-1 {
     width: 8.33%;
